--- a/src/blocks/b-blog-item/b-blog-item.less
+++ b/src/blocks/b-blog-item/b-blog-item.less
@@ -12,7 +12,7 @@
 
 .b-blog-item__title {
 	font-size: 24px;
-	font-weight: bold;
+	font-weight: 800;
 	margin-bottom: 20px;
 
 	@media (min-width: @grid-float-breakpoint) {
