--- a/src/blocks/b-contact-links/b-contact-links.less
+++ b/src/blocks/b-contact-links/b-contact-links.less
@@ -10,7 +10,7 @@
 
 .b-contact-links__header {
 	.my-heading-h1();
-	font-weight: bold;
+	font-weight: 800;
 	margin-top: 0;
 	margin-bottom: 10px;
 }
