--- a/src/blocks/b-copy-button/b-copy-button.less
+++ b/src/blocks/b-copy-button/b-copy-button.less
@@ -10,7 +10,7 @@
 
     color: #2F5BED;
 
-    font-weight: bold;
+    font-weight: 800;
     font-size: 13px;
     letter-spacing: 0.1em;
     line-height: 20px;
