--- a/src/blocks/b-error/b-error.less
+++ b/src/blocks/b-error/b-error.less
@@ -23,12 +23,12 @@
 		font-size: 300px;
 	}
 
-	font-weight: bold;
+	font-weight: 800;
 }
 
 .b-error__text {
 	font-size: 20px;
-	font-weight: bold;
+	font-weight: 800;
 
 	@media (min-width: @screen-sm-min) {
 		font-size: 30px;
