--- a/src/blocks/b-form/b-form.less
+++ b/src/blocks/b-form/b-form.less
@@ -70,7 +70,7 @@
 .b-form__button {
 	.my-heading-lead();
 
-	font-weight: bold;
+	font-weight: 800;
 	padding: 19px 60px 23px !important;
 	margin-top: 10px;
 
@@ -97,7 +97,7 @@
 
 .b-form__header {
 	.my-heading-h1();
-	font-weight: bold;
+	font-weight: 800;
 	margin-top: 30px;
 	margin-bottom: 10px;
 }
