--- a/src/blocks/b-header-menu/b-header-menu.less
+++ b/src/blocks/b-header-menu/b-header-menu.less
@@ -9,7 +9,7 @@
 
 .b-header-menu__header
 {
-	font-weight   : bold;
+	font-weight   : 800;
 	line-height   : 48px;
 	font-size     : 50px;
 	margin-bottom : 28px;
@@ -27,7 +27,7 @@
 	text-decoration : none;
 	border-bottom   : 2px solid rgba(57, 58, 89, .05);
 	font-size       : 20px;
-	font-weight     : bold;
+	font-weight     : 800;
 	&:hover, &:active, &:focus
 	{
 		color               : #008FCB;
