--- a/src/blocks/b-offer-variants/b-offer-variants.less
+++ b/src/blocks/b-offer-variants/b-offer-variants.less
@@ -11,7 +11,7 @@
 .b-offer-variants__header {
 	.my-heading-h1();
 	line-height: 1.2;
-	font-weight: bold;
+	font-weight: 800;
 	margin-bottom: 32px;
 }
 
@@ -36,7 +36,7 @@
 
 .b-offer-variants__title {
 	font-size: 30px;
-	font-weight: bold;
+	font-weight: 800;
 	margin-bottom: 15px;
 }
 
