--- a/src/blocks/b-offers/b-offers.less
+++ b/src/blocks/b-offers/b-offers.less
@@ -37,7 +37,7 @@
 .b-offers__title {
 	.my-heading-h3();
 
-	font-weight: bold;
+	font-weight: 800;
 	margin-bottom: 17px;
 
 	@media (min-width: @grid-float-breakpoint) {
