--- a/src/blocks/b-page/b-page.less
+++ b/src/blocks/b-page/b-page.less
@@ -17,7 +17,7 @@
 .b-page__title {
 	margin-top: 0;
 	margin-bottom: 45px;
-	font-weight: bold;
+	font-weight: 800;
 
 	.my-heading-h1();
 
@@ -74,7 +74,7 @@
 	padding: 0 13px 0 34px;
 	font-size: 12px;
 	line-height: 36px;
-	font-weight: bold;
+	font-weight: 800;
 	color: @block-link-color;
 	text-transform: uppercase;
 	letter-spacing: .1em;
@@ -94,7 +94,7 @@
 		left: 13px;
 		content: '#';
 		font-size: 15px;
-		font-weight: bold;
+		font-weight: 800;
 		color: fade(#161f6a, 20%);
 	}
 
