--- a/src/blocks/b-portfolio-tag/b-portfolio-tag.less
+++ b/src/blocks/b-portfolio-tag/b-portfolio-tag.less
@@ -48,7 +48,7 @@
 	background: #fff;
 	color              : @link-active-color;
 	font-size          : 12px;
-	font-weight        : bold;
+	font-weight        : 800;
 	text-transform     : uppercase;
 	letter-spacing     : .1em;
 	text-decoration    : none !important;
@@ -63,7 +63,7 @@
 		color          : fade(#e5ebff, 100%);
 		display        : inline-block;
 		font-size      : 15px;
-		font-weight    : bold;
+		font-weight    : 800;
 		margin-right   : 10px;
 		height         : @height;
 		line-height    : @height;
