--- a/src/blocks/b-portfolio/b-portfolio.less
+++ b/src/blocks/b-portfolio/b-portfolio.less
@@ -276,7 +276,7 @@
 	position: absolute;
 	top: 10px;
 	left: 10px;
-	font-weight: bold;
+	font-weight: 800;
 	font-size: 13px;
 	line-height: 25px;
 	display: inline-block;
@@ -305,7 +305,7 @@
 .b-portfolio__title {
 	.my-heading-h3();
 	line-height: 24/22;
-	font-weight: bold;
+	font-weight: 800;
 
 	word-wrap: break-word;
 	letter-spacing: 0;
@@ -326,7 +326,7 @@
 	position: absolute;
 	right: 11px;
 	bottom: 11px;
-	font-weight: bold;
+	font-weight: 800;
 	font-size: 13px;
 	line-height: 25px;
 	letter-spacing: .05em;
