--- a/src/blocks/b-reviews/b-reviews.less
+++ b/src/blocks/b-reviews/b-reviews.less
@@ -135,7 +135,7 @@
 	font-size: 12px;
 	line-height: 18px;
 	color: #161f6a;
-	font-weight: bold;
+	font-weight: 800;
 	text-transform: uppercase;
 	letter-spacing: .12em;
 	cursor: default;
@@ -150,7 +150,7 @@
 .b-reviews__title {
 	color: @block-link-color;
 	font-size: 24px;
-	font-weight: bold;
+	font-weight: 800;
 
 	display: inline-block;
 	margin: 10px 10px 22px;
@@ -177,7 +177,7 @@
 .b-reviews__date {
 	float: left;
 	color: #161f6a;
-	font-weight: bold;
+	font-weight: 800;
 	font-size: 12px;
 	line-height: 18px;
 	letter-spacing: .12em;
@@ -186,7 +186,7 @@
 .b-reviews__head {
 	.my-heading-h2();
 
-	font-weight: bold;
+	font-weight: 800;
 	margin-top: 0;
 	margin-bottom: 45px;
 }
