--- a/src/blocks/b-size-filter/b-size-filter.less
+++ b/src/blocks/b-size-filter/b-size-filter.less
@@ -15,7 +15,7 @@
 	color: @block-link-color;
 	background: #fff;
 	box-shadow: 0 20px 30px fade(#161f6a, 5%);
-	font-weight: bold;
+	font-weight: 800;
 	letter-spacing: .1em;
 	display: inline-block;
 	border-radius: 5px;
@@ -100,7 +100,7 @@
 }
 
 .b-size-filter__toggle-text {
-	font-weight: bold;
+	font-weight: 800;
 	font-size: 15px;
 	line-height: 1.4;
 	color: @block-link-color;
