--- a/src/blocks/b-size-tabs/b-size-tabs.less
+++ b/src/blocks/b-size-tabs/b-size-tabs.less
@@ -22,7 +22,7 @@
 	font-size: 12px;
 	line-height: 32px;
 	color: @text-color;
-	font-weight: bold;
+	font-weight: 800;
 	letter-spacing: .1em;
 	display: inline-block;
 	border: 2px dashed #e5ebff;
