--- a/src/blocks/b-splash-prices/b-splash-prices.less
+++ b/src/blocks/b-splash-prices/b-splash-prices.less
@@ -14,7 +14,7 @@
 .b-splash-prices__header {
 	.my-heading-h1();
 
-	font-weight: bold;
+	font-weight: 800;
 	text-align: center;
 	margin-top: 0;
 	margin-bottom: 50px;
@@ -89,7 +89,7 @@
 
 .b-splash-prices__title {
 	font-size: 24px;
-	font-weight: bold;
+	font-weight: 800;
 	margin-bottom: 13px;
 }
 
@@ -107,7 +107,7 @@
 .b-splash-prices__price {
 	color: #fff;
 	font-size: 24px;
-	font-weight: bold;
+	font-weight: 800;
 
 	line-height: 92px/2;
 	height: 92px/2;
@@ -129,5 +129,5 @@
 
 .b-splash-prices__button {
 	margin-top: 91px;
-	font-weight: bold;
+	font-weight: 800;
 }
