--- a/src/less/bootstrap/variables.less
+++ b/src/less/bootstrap/variables.less
@@ -644,7 +644,7 @@
 
 @alert-padding:               15px;
 @alert-border-radius:         @border-radius-base;
-@alert-link-font-weight:      bold;
+@alert-link-font-weight:      800;
 
 @alert-success-bg:            @state-success-bg;
 @alert-success-text:          @state-success-text;
@@ -800,7 +800,7 @@
 //** Badge background color in active nav link
 @badge-active-bg:             #fff;
 
-@badge-font-weight:           bold;
+@badge-font-weight:           800;
 @badge-line-height:           1;
 @badge-border-radius:         10px;
 
@@ -842,7 +842,7 @@
 //
 //##
 
-@close-font-weight:           bold;
+@close-font-weight:           800;
 @close-color:                 #000;
 @close-text-shadow:           0 1px 0 #fff;
 
