--- a/src/less/mymixins.less
+++ b/src/less/mymixins.less
@@ -28,7 +28,7 @@
 // Заголовок
 .my-heading-h1() {
     font-size: 42px;
-    font-weight: bold;
+    font-weight: 800;
 
     @media (min-width: @screen-md-min) {
         font-size: 64px;
@@ -42,7 +42,7 @@
 // Подзаголовок
 .my-heading-h2() {
     font-size: 38px;
-    font-weight: bold;
+    font-weight: 800;
 
     @media (min-width: @screen-md-min) {
         font-size: 58px;
@@ -56,7 +56,7 @@
 // Подзаголовок (уменьшенный)
 .my-heading-h2-small() {
     font-size: 40px;
-    font-weight: bold;
+    font-weight: 800;
 
     @media (min-width: @screen-md-min) {
         font-size: 50px;
@@ -69,7 +69,7 @@
 
 .my-heading-case-title() {
     font-size: 38px;
-    font-weight: bold;
+    font-weight: 800;
 
     @media (min-width: @screen-md-min) {
         font-size: 46px;
