--- a/src/blocks/b-back-button/b-back-button.less
+++ b/src/blocks/b-back-button/b-back-button.less
@@ -2,7 +2,7 @@
 @import "mixins";
 
 .b-back-button {
-    font-weight: bold;
+    font-weight: 800;
     font-size: 16px;
     line-height: 21px;
     /* identical to box height */
