--- a/src/blocks/b-blog/b-blog.less
+++ b/src/blocks/b-blog/b-blog.less
@@ -18,7 +18,7 @@
 	margin-top: 62px;
 	margin-bottom: 22px;
 	text-align: center;
-	font-weight: bold;
+	font-weight: 800;
 	font-size: 40px;
 }
 
@@ -47,7 +47,7 @@
 .b-blog__title {
 	.my-heading-h3();
 
-	font-weight: bold;
+	font-weight: 800;
 	margin-bottom: 17px;
 
 	@media (min-width: @grid-float-breakpoint) {
