--- a/src/blocks/b-cases/b-cases.less
+++ b/src/blocks/b-cases/b-cases.less
@@ -184,7 +184,7 @@
     bottom: 20px;
     left: 25px;
 
-    font-weight: bold;
+    font-weight: 800;
     font-size: 16px;
     line-height: 47px/2;
     /* identical to box height */
