--- a/src/blocks/b-clients/b-clients.less
+++ b/src/blocks/b-clients/b-clients.less
@@ -122,7 +122,7 @@
 	color: @block-link-color;
 	font-size: 20px;
 	line-height: 34px;
-	font-weight: bold;
+	font-weight: 800;
 	//border-bottom: 2px solid @block-link-border-color;
 	display: inline-block;
 	white-space: nowrap;
@@ -171,7 +171,7 @@
 .b-clients__head {
 	.my-heading-h2();
 
-	font-weight: bold;
+	font-weight: 800;
 	margin-top: 0;
 	margin-bottom: 45px;
 }
