--- a/src/blocks/b-discounts/b-discounts.less
+++ b/src/blocks/b-discounts/b-discounts.less
@@ -12,7 +12,7 @@
 	margin-top: 0;
 	margin-bottom: 50px;
 	text-align: center;
-	font-weight: bold;
+	font-weight: 800;
 
 	.my-heading-h1();
 }
@@ -29,7 +29,7 @@
 
 .b-discounts__title {
 	font-size: 30px;
-	font-weight: bold;
+	font-weight: 800;
 	margin-bottom: 20px;
 }
 
