--- a/src/blocks/b-footer-menu/b-footer-menu.less
+++ b/src/blocks/b-footer-menu/b-footer-menu.less
@@ -14,7 +14,7 @@
 
 .b-footer-menu__header {
 	font-size: 24px;
-	font-weight: bold;
+	font-weight: 800;
 	margin-bottom: 28px;
 
 	text-align: center;
