--- a/src/blocks/b-navbar/b-navbar.less
+++ b/src/blocks/b-navbar/b-navbar.less
@@ -61,7 +61,7 @@
 				padding         : 0;
 				line-height     : @line-height-base;
 
-				font-weight     : bold;
+				font-weight     : 800;
 				font-size       : 20px;
 				color           : @text-color;
 				text-decoration : none;
@@ -92,7 +92,7 @@
 	{
 		display        : inline-block;
 		vertical-align : middle;
-		font-weight    : bold;
+		font-weight    : 800;
 		text-align     : center;
 
 		&_order
