--- a/src/blocks/b-price-modal/b-price-modal.less
+++ b/src/blocks/b-price-modal/b-price-modal.less
@@ -8,7 +8,7 @@
 .b-price-modal__title {
 	font-size: 40px;
 	line-height: 42px;
-	font-weight: bold;
+	font-weight: 800;
 	margin-top: 41px;
 	margin-bottom: 68px;
 	text-align: center;
@@ -56,7 +56,7 @@
 
 	font-size: 40px;
 	line-height: 54px;
-	font-weight: bold;
+	font-weight: 800;
 	width: 182px;
 	height: 54px;
 	padding-right: 30px;
@@ -69,7 +69,7 @@
 }
 
 .b-price-modal__button {
-	font-weight: bold;
+	font-weight: 800;
 	position: relative;
 	top: -10px;
 	margin-left: 20px;
