--- a/src/blocks/b-prices/b-prices.less
+++ b/src/blocks/b-prices/b-prices.less
@@ -10,7 +10,7 @@
 }
 
 .b-prices__header {
-	font-weight: bold;
+	font-weight: 800;
 	margin-bottom: 15px;
 
 	.my-heading-h1();
@@ -106,7 +106,7 @@
 
 	&:before {
 		content: 'Рекомендуем';
-		font-weight: bold;
+		font-weight: 800;
 		color: #fff;
 
 		position: absolute;
@@ -123,7 +123,7 @@
 
 .b-prices__title {
 	font-size: 30px;
-	font-weight: bold;
+	font-weight: 800;
 	margin-bottom: 33px;
 }
 
@@ -198,7 +198,7 @@
 .b-prices__price {
 	font-size: 40px;
 	line-height: 54px;
-	font-weight: bold;
+	font-weight: 800;
 	width: 182px;
 	height: 54px;
 	background: left top no-repeat url("../../assets/img/price-bg.png");
@@ -220,7 +220,7 @@
 
 .b-prices__button {
 	font-size: 24px;
-	font-weight: bold;
+	font-weight: 800;
 	display: inline-block;
 	color: #fff;
 
