--- a/src/blocks/b-review/b-review.less
+++ b/src/blocks/b-review/b-review.less
@@ -63,7 +63,7 @@
 	text-transform: uppercase;
 	font-size: 11px;
 	line-height: 1.5;
-	font-weight: bold;
+	font-weight: 800;
 
 	@media (min-width: @screen-xs-min) {
 		letter-spacing: .1em;
@@ -79,7 +79,7 @@
 .b-review__date {
 	float: right;
 	color: @text-color;
-	font-weight: bold;
+	font-weight: 800;
 	font-size: 11px;
 	line-height: 1.5;
 	text-transform: uppercase;
@@ -146,7 +146,7 @@
 	position: relative;
 	display: inline-block;
 	cursor: pointer;
-	font-weight: bold;
+	font-weight: 800;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	padding: 16px 35px;
