--- a/src/blocks/b-subscribe/b-subscribe.less
+++ b/src/blocks/b-subscribe/b-subscribe.less
@@ -9,7 +9,7 @@
 }
 
 .b-subscribe__title {
-	font-weight: bold;
+	font-weight: 800;
 	margin-bottom: 10px;
 	line-height: @headings-line-height;
 
@@ -53,7 +53,7 @@
 }
 
 .b-subscribe__button {
-	font-weight: bold;
+	font-weight: 800;
 	padding-left: 22px;
 	padding-right: 22px;
 	margin-left: 15px;
