--- a/src/blocks/b-treatment/b-treatment.less
+++ b/src/blocks/b-treatment/b-treatment.less
@@ -87,7 +87,7 @@
 .b-treatment__title {
 	.my-heading-h1();
 
-	font-weight: bold;
+	font-weight: 800;
 	line-height: 1;
 	padding-top: 30px;
 	margin-bottom: 20px;
