--- a/src/blocks/g-loader/g-loader.less
+++ b/src/blocks/g-loader/g-loader.less
@@ -59,7 +59,7 @@
 .g-loader__link {
 	display: block;
 	width: 100%;
-	font-weight: bold;
+	font-weight: 800;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	padding: 23px 25px;
@@ -89,7 +89,7 @@
 	border-radius: 10px;
 	font-size: 20px;
 	height: 80px;
-	font-weight: bold;
+	font-weight: 800;
 	letter-spacing: .1em;
 	text-transform: uppercase;
 	color: #9ba1b6;
