rename font: craftwork_grotesk -> Craftwork.

--- a/src/assets/fonts/stylesheet.css
+++ b/src/assets/fonts/stylesheet.css
@@ -3,7 +3,7 @@
 
 
 @font-face {
-    font-family: 'craftwork_grotesk';
+    font-family: 'Craftwork';
     src: url('craftworkgrotesk-bold-webfont.eot');
     src: url('craftworkgrotesk-bold-webfont.eot?#iefix') format('embedded-opentype'),
          url('craftworkgrotesk-bold-webfont.woff2') format('woff2'),
@@ -17,7 +17,7 @@
 
 
 @font-face {
-    font-family: 'craftwork_grotesk';
+    font-family: 'Craftwork';
     src: url('craftworkgrotesk-heavy-webfont.eot');
     src: url('craftworkgrotesk-heavy-webfont.eot?#iefix') format('embedded-opentype'),
          url('craftworkgrotesk-heavy-webfont.woff2') format('woff2'),
@@ -29,7 +29,7 @@
 
 
 @font-face {
-    font-family: 'craftwork_grotesk';
+    font-family: 'Craftwork';
     src: url('craftworkgrotesk-medium-webfont.eot');
     src: url('craftworkgrotesk-medium-webfont.eot?#iefix') format('embedded-opentype'),
          url('craftworkgrotesk-medium-webfont.woff2') format('woff2'),
@@ -42,7 +42,7 @@
 
 
 @font-face {
-    font-family: 'craftwork_grotesk';
+    font-family: 'Craftwork';
     src: url('craftworkgrotesk-regular-webfont.eot');
     src: url('craftworkgrotesk-regular-webfont.eot?#iefix') format('embedded-opentype'),
          url('craftworkgrotesk-regular-webfont.woff2') format('woff2'),
@@ -55,7 +55,7 @@
 
 
 @font-face {
-    font-family: 'craftwork_grotesk';
+    font-family: 'Craftwork';
     src: url('craftworkgrotesk-semibold-webfont.eot');
     src: url('craftworkgrotesk-semibold-webfont.eot?#iefix') format('embedded-opentype'),
          url('craftworkgrotesk-semibold-webfont.woff2') format('woff2'),
