--- a/src/blocks/b-portfolio/b-portfolio.less
+++ b/src/blocks/b-portfolio/b-portfolio.less
@@ -76,29 +76,29 @@
 
 	height: (@portfolio-width * 3) + 20px;
 
-	max-width: @portfolio-width * 4;
-	width: @portfolio-width * 4 !important;
+	//max-width: @portfolio-width * 4;
+	//width: @portfolio-width * 4 !important;
 
-	margin-left: -10px;
-	margin-right: 0;
+	//margin-left: -10px;
+	//margin-right: 0;
 
 	&.b-portfolio__list_horizontal {
-		max-width: @portfolio-width * 5;
-		width: @portfolio-width * 5 !important;
+		//max-width: @portfolio-width * 5;
+		//width: @portfolio-width * 5 !important;
 	}
 
 	&.b-portfolio__list_faded {
 
-		&:after {
-			left: auto;
-			right: 110px;
-			height: auto;
-
-			width: 150px;
-			top: 0;
-
-			background: linear-gradient(to left, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, .75) 50%, rgba(255, 255, 255, 0) 100%);
-		}
+		//&:after {
+		//	left: auto;
+		//	right: 110px;
+		//	height: auto;
+		//
+		//	width: 150px;
+		//	top: 0;
+		//
+		//	background: linear-gradient(to left, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, .75) 50%, rgba(255, 255, 255, 0) 100%);
+		//}
 	}
 }
 
@@ -131,6 +131,7 @@
 
 	&:after {
 		content: '';
+		pointer-events: none;
 
 		position: absolute;
 		bottom: 0;
