--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -198,7 +198,7 @@
 
 .b-portfolio-item__over-link_img {
     display: inline-block;
-    margin-bottom: -4px;
+    //margin-bottom: -4px;
 }
 
 .b-portfolio-item__over-link_html {
@@ -243,7 +243,8 @@
 
 .b-portfolio-item__container_with_background.b-portfolio-item_ready {
     .b-portfolio-item__head {
-        margin: -80px -190px -4px;
+        margin: -80px 0 -4px;
+        //margin: -80px -190px -4px;
 
         //&:after {
         //    position: absolute;
