--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -223,10 +223,12 @@
     border-top-right-radius: 15px;
 
     width: 100%;
+    display: block;
 }
 
 .b-portfolio-item__background {
     display: none;
+    position: relative;
 }
 
 .b-portfolio-item__shadow {
@@ -235,6 +237,7 @@
     left: 0;
     right: 0;
     height: 1000px;
+    max-height: 100%;
     background: linear-gradient(to bottom, rgba(22, 31, 106, 1) 0%, rgba(22, 31, 106, 0) 100%);
 
     border-top-left-radius: 15px;
