--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -251,7 +251,12 @@
 @media (min-width: @screen-lg) {
     .b-portfolio-item__container_with_background.b-portfolio-item_ready {
         .b-portfolio-item__head {
-            margin: -80px 0 -4px;
+            margin: 0 0 -4px;
+
+            @media (min-width: 1200px) {
+                margin: -80px 0 -4px;
+            }
+
             //margin: -80px -190px -4px;
 
             //&:after {
