--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -249,6 +249,12 @@
 }
 
 @media (min-width: @screen-lg) {
+    .b-portfolio-item__container_with_background {
+        @media (min-width: 1200px) {
+            margin-top: -40px;
+        }
+    }
+
     .b-portfolio-item__container_with_background.b-portfolio-item_ready {
         .b-portfolio-item__head {
             margin: 0 0 -4px;
