--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -253,7 +253,7 @@
         margin-top: 80px;
 
         @media (min-width: 1200px) {
-            margin-top: 40px + 35px;
+            margin-top: 40px;
         }
     }
 
