--- a/src/blocks/b-portfolio-carousel/b-portfolio-carousel.less
+++ b/src/blocks/b-portfolio-carousel/b-portfolio-carousel.less
@@ -93,6 +93,16 @@
     border-radius: 10px;
 }
 
+.b-portfolio-carousel__media .b-portfolio__video {
+    width: auto !important;
+    height: auto !important;
+
+    max-width: 240px !important;
+    max-height: 400px !important;
+
+    border-radius: 10px;
+}
+
 .b-portfolio-carousel__title {
     display: block;
     max-width: 100%;
@@ -130,6 +140,7 @@
 
     cursor: pointer;
     z-index: 100;
+    outline: none !important;
 
     &:after {
         content: '';
@@ -149,8 +160,6 @@
         background-color: transparent;
         border: 6px solid #3654ee;
         border-radius: 50%;
-
-        outline: none !important;
     }
 
     &:hover {
