--- a/src/blocks/b-portfolio-carousel/b-portfolio-carousel.less
+++ b/src/blocks/b-portfolio-carousel/b-portfolio-carousel.less
@@ -30,6 +30,8 @@
 }
 
 .b-portfolio-carousel_block {
+    margin-right: 41px;
+
     &:last-child .b-portfolio-carousel__item:last-child {
         margin-right: 0;
     }
@@ -80,7 +82,7 @@
     transform: translateY(0px);
 
     border-radius: 10px;
-    box-shadow: 0 20px 40px 0 ~"rgb(76 49 31 / 20%)";
+    //box-shadow: 0 20px 40px 0 ~"rgb(76 49 31 / 20%)";
 
     &:hover, &:active, &:focus {
         transform: translateY(-10px);
