--- a/src/blocks/b-portfolio-carousel/b-portfolio-carousel.less
+++ b/src/blocks/b-portfolio-carousel/b-portfolio-carousel.less
@@ -200,8 +200,9 @@
         transition: all .2s ease-in-out;
 
         background-color: transparent;
-        border: 4px solid #3654ee;
+        border: 2px solid #3654ee;
         border-radius: 50%;
+        margin: 0;
 
         @media (min-width: @screen-md-min) {
             width: 160px;
@@ -213,8 +214,8 @@
 
     &:hover {
         &:after {
-            width: 82px;
-            height: 82px;
+            width: 71px;
+            height: 71px;
 
             @media (min-width: @screen-md-min) {
                 width: 131px;
