--- a/src/blocks/b-portfolio-carousel/b-portfolio-carousel.less
+++ b/src/blocks/b-portfolio-carousel/b-portfolio-carousel.less
@@ -6,6 +6,7 @@
     width: auto;
     height: auto;
     overflow: hidden;
+    padding-top: 22px;
 
     & > .container {
         position: relative;
