--- a/src/blocks/b-portfolio-carousel/b-portfolio-carousel.less
+++ b/src/blocks/b-portfolio-carousel/b-portfolio-carousel.less
@@ -6,7 +6,11 @@
     width: auto;
     height: auto;
     overflow: hidden;
-    padding-top: 22px;
+    padding-top: 50px;
+
+    @media (min-width: @screen-md-min) {
+        padding-top: 22px;
+    }
 
     & > .container {
         position: relative;
