--- a/src/blocks/b-portfolio-carousel/b-portfolio-carousel.less
+++ b/src/blocks/b-portfolio-carousel/b-portfolio-carousel.less
@@ -8,7 +8,7 @@
     overflow: hidden;
     padding-top: 50px;
 
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-lg-min) {
         padding-top: 22px;
     }
 
@@ -37,7 +37,7 @@
 .b-portfolio-carousel_block {
     margin-right: 31px;
 
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-lg-min) {
         margin-right: 41px;
     }
 
@@ -49,7 +49,7 @@
 .b-portfolio-carousel__header {
     margin-bottom: 25px;
 
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-lg-min) {
         margin-bottom: 45px;
     }
 }
@@ -64,7 +64,7 @@
     transition: all .2s ease-in-out;
     transform: translate(0, 0);
 
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-lg-min) {
         font-size: 52px;
     }
 
@@ -85,7 +85,7 @@
     margin-right: 31px;
     width: 180px;
 
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-lg-min) {
         margin-right: 41px;
         width: 240px;
     }
@@ -101,7 +101,7 @@
 .b-portfolio-carousel__media {
     width: 180px;
 
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-lg-min) {
         width: 240px;
     }
 
@@ -130,7 +130,7 @@
     max-width: 180px !important;
     max-height: 300px !important;
 
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-lg-min) {
         max-width: 240px !important;
         max-height: 400px !important;
     }
@@ -149,7 +149,7 @@
     letter-spacing: 1.5px;
     text-transform: uppercase;
 
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-lg-min) {
         font-size: 14px;
     }
 
@@ -181,7 +181,7 @@
     z-index: 100;
     outline: none !important;
 
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-lg-min) {
         margin-top: 62px + 45px; // height + margin of year
         width: 100px;
         height: 100px;
@@ -209,7 +209,7 @@
         border-radius: 50%;
         margin: 0;
 
-        @media (min-width: @screen-md-min) {
+        @media (min-width: @screen-lg-min) {
             width: 160px;
             height: 160px;
 
@@ -222,7 +222,7 @@
             width: 71px;
             height: 71px;
 
-            @media (min-width: @screen-md-min) {
+            @media (min-width: @screen-lg-min) {
                 width: 131px;
                 height: 131px;
             }
@@ -247,7 +247,7 @@
         background-image: url("../../assets/img/arrow-square-left.svg");
         z-index: 101;
 
-        @media (min-width: @screen-md-min) {
+        @media (min-width: @screen-lg-min) {
             width: 100px;
             height: 100px;
             background-size: 50px;
@@ -260,7 +260,11 @@
     margin-left: 15px;
     transform: translate(15%, -50%);
 
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-lg-min) {
+        margin-left: 0;
+        transform: translate(15%, -50%);
+    }
+    @media (min-width: 1430px) {
         margin-left: 0;
         transform: translate(-75%, -50%);
     }
@@ -271,7 +275,11 @@
     margin-right: 15px;
     transform: translate(-15%, -50%);
 
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-lg-min) {
+        margin-right: 0;
+        transform: translate(-15%, -50%);
+    }
+    @media (min-width: 1430px) {
         margin-right: 0;
         transform: translate(75%, -50%);
     }
@@ -292,7 +300,7 @@
     height: 157px;
     background-size: 146px 157px;
 
-    @media (min-width: @screen-md-min) {
+    @media (min-width: @screen-lg-min) {
         left: 425px;
         width: 264px;
         height: 284px;
